# GNS

./: .gitignore  CMakeLists.txt  Link.cpp  README.md  Stats.hpp  Topology.hpp  results.csv
.history/core/include/network/: Routing_20260331141857.hpp  Routing_20260331142101.hpp  Routing_20260331142103.hpp
.history/core/src/network/: Routing_20260331142001.cpp  Routing_20260331142031.cpp  Routing_20260331142037.cpp  Routing_20260331142108.cpp
app/: CMakeLists.txt  main.cpp
app/gui/include/: LatencyChart.hpp  MetricsPannel.hpp  PacketRenderer.hpp  Window.hpp
app/gui/src/: LatencyChart.cpp  MetricsPannel.cpp  PacketRenderer.cpp  Window.cpp
app/topologies/: imgui.ini  mesh4.json  mesh5.json  star.json
core/: CMakeLists.txt  event_engine_design.md
core/include/core/: Event.h  EventQueue.h  PrintEvent.h  SimulationClock.h
core/include/engine/core/: EventQueue.hpp  RunConfig.hpp  SimulationEngine.hpp  SimulationState.hpp
core/include/engine/events/: Event.hpp  PacketArrivalEvent.hpp  PacketGenerationEvent.hpp  PacketReceivedEvent.hpp  PrintEvent.hpp  TCPAckEvent.hpp  TCPHandshakeEvent.hpp  TCPSynAckEvent.hpp
core/include/engine/time/: SimulationClock.hpp
core/include/enums/: PacketType.hpp  TCPState.hpp
core/include/kns/engine/: EventQueue.hpp  PrintEvent.hpp  SimulationClock.hpp  SimulationEngine.hpp
core/include/kns/network/: link.hpp  topology.hpp  topology_loader.hpp
core/include/network/: Link.hpp  Packet.hpp  PacketTravelInfo.hpp  Routing.hpp  Topology.hpp  TopologyLoader.hpp
core/include/network/tcp/: TCPConnection.hpp
core/include/network/utils/: PacketUtils.hpp
core/src/: Event.cpp  EventQueue.cpp  PrintEvent.cpp  SimulationClock.cpp
core/src/engine/: Event.cpp  EventQueue.cpp  PrintEvent.cpp  SimulationClock.cpp  SimulationEngine.cpp
core/src/engine/core/: EventQueue.cpp  SimulationEngine.cpp
core/src/engine/events/: Event.cpp  PacketGenerationEvent.cpp  PacketReceivedEvent.cpp  PrintEvent.cpp  TCPAckEvent.cpp  TCPHandshakeEvent.cpp  TCPSynAckEvent.cpp
core/src/engine/time/: SimulationClock.cpp
core/src/network/: Link.cpp  Routing.cpp  Topology.cpp  TopologyLoader.cpp  topology.cpp  topology_loader.cpp
core/src/network/tcp/: TCPConnection.cpp
core/src/network/utils/: PacketUtils.cpp
docs/: architecture.md  experiments.md
results/: results_loss_prob_0.01.csv  results_loss_prob_0.05.csv  results_loss_prob_0.1.csv  results_loss_prob_0.2.csv  results_loss_prob_0.3.csv  results_loss_prob_0.csv
results/loss_prob/: results_loss_prob_0.2.csv
results/v0.5/packet_size/: results_packet_size_3000.csv  results_packet_size_4500.csv  results_packet_size_6000.csv
results/v0.9/test_#1/: metrics.csv  run_config.json  summary.json
results/v0.9/test_#2/: metrics.csv  run_config.json  summary.json
results/v0.9/test_#3/: metrics.csv  summary.json
results/v0.9/test_1/: summary.json
results/v0.9/test_2/: metrics.csv  summary.json
scripts/: demo.ps1  plot_results.py  plot_results_packet_size.py  run.ps1  run.py  run_all.ps1  run_packet_size.ps1
src/: main.cpp  node.cpp
tests/: CMakeLists.txt  test_event_queue.cpp  test_simulation_clock.cpp  test_topology.cpp
topologies/: mesh4.json  mesh5.json
